<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Abb Blind Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ALL_PREF" translatable="false">ALL_PREF</string>
    <string name="chats" translatable="false">chats</string>
    <string name="fav_data" translatable="false">fav_data</string>
    <string name="users_login" translatable="false">users_login</string>
    <string name="remember_sign_in" translatable="false">remember_sign_in</string>
    <string name="sign_in_email" translatable="false">sign_in_email</string>
    <string name="sign_in_password" translatable="false">sign_in_password</string>
    <string name="open_drawer" translatable="false">open_drawer</string>
    <string name="close_drawer" translatable="false">close_drawer</string>
    <string name="profile" translatable="false">profile</string>
    <string name="messages" translatable="false">messages</string>
    <string name="display_data" translatable="false">displayData</string>
    <string name="not_registered" translatable="false">User not registered</string>
    <string name="likes_data" translatable="false">likesData</string>
    <string name="favorite" translatable="false">favorite</string>
    <string name="likes_path" translatable="false">likes</string>
    <string name="notification_path" translatable="false">notification</string>
    <string name="messages_path" translatable="false">messages</string>
    <string name="display_data_path" translatable="false">displayData</string>
    <string name="month" translatable="false">Month</string>
    <string name="day" translatable="false">Day</string>
    <string name="year" translatable="false">Year</string>

    <string name="user_profile">유저 프로필</string>
    <string name="play_now">지금 플레이</string>
    <string name="name">이름</string>
    <string name="last_seen" >마지막으로 본</string>
    <string name="profile_display" tools:ignore="MissingTranslation">프로필</string>
    <string name="favorite_display" tools:ignore="MissingTranslation">즐겨찾기</string>
    <string name="messages_display" tools:ignore="MissingTranslation">메시지</string>
    <string name="share_gift">선물 공유</string>
    <string name="chess_info">다음 챔피언이 될 준비가 되셨습니까?</string>
    <string name="play_chess_with">체스 게임</string>
    <string name="log_out">로그 아웃</string>
    <string name="find_the_best_partner">최고의 파트너 찾기!</string>
    <string name="join_us_and_socialize_with_millions_of_people">우리와 함께하고 수백만 명의 사람들과 사교하십시오.</string>
    <string name="truth_or_dare">진실 아니면 감히</string>
    <string name="pick_truth">진실을 선택</string>
    <string name="pick_dare">픽 감히</string>
    <string name="add_truth">진실을 더하다</string>
    <string name="add_dare">도전 추가</string>
    <string name="quit_game">게임 종료?</string>
    <string name="play">놀다</string>
    <string name="quit">그만두다</string>
    <string name="get_more_boards">더 많은 보드 받기</string>
    <string name="white_s_turn">화이트의 차례</string>
    <string name="discover">발견하다</string>
    <string name="connecting_to_other_users">다른 사용자와 연결</string>
    <string name="message">메시지</string>
    <string name="story">이야기</string>
    <string name="my_profile">내 프로필</string>
    <string name="location">위치</string>
    <string name="about_me">나에 대해서</string>
    <string name="marital_status">결혼 여부</string>
    <string name="body_style">바디 스타일</string>
    <string name="education">교육</string>
    <string name="university">대학교</string>
    <string name="interests">이해:</string>
    <string name="notification">공고</string>
    <string name="back">뒤</string>
    <string name="similar_people">비슷한 사람들</string>
    <string name="search">검색</string>
    <string name="sign_in_header_msg">이메일 ID를 입력하여 계정에 로그인.</string>
    <string name="e_mail">이메일</string>
    <string name="password">비밀번호</string>
    <string name="remember_me">날 기억해</string>
    <string name="forgot_your_password">비밀번호를 잊어 버렸습니까?</string>
    <string name="log_in">로그인</string>
    <string name="sign_up_header_text">이메일 ID를 입력하기만 하면 계정에 로그인할 수 있습니다.</string>
    <string name="phone_number">전화 번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="sign_up">가입하기</string>
    <string name="already_have_an_account">이미 계정이 있습니다.?</string>
    <string name="let_s_set_up_your_profile">프로필을 설정해 보겠습니다.!</string>
    <string name="when_is_your_birthday_nwe_do_this_to_display_your_age">생일이 언제인가요?\n나이를 표시하기 위해 이 작업을 수행합니다..</string>
    <string name="what_are_your_interests">니가 관심 있는게 뭐니?</string>
    <string name="what_is_your_marital_status">당신의 결혼 상태는 무엇입니까?</string>
    <string name="single">하나의</string>
    <string name="married">기혼</string>
    <string name="divorced">이혼</string>
    <string name="separated">분리</string>
    <string name="long_relationship">긴 관계</string>
    <string name="what_is_your_body_style">당신의 몸 스타일은 무엇입니까?</string>
    <string name="slim">날씬한</string>
    <string name="exercise">운동</string>
    <string name="average">평균</string>
    <string name="tall">키가 큰</string>
    <string name="attractive">매력적인</string>
    <string name="stallion_status">종마 상태</string>
    <string name="don_t_say">말하지마</string>
    <string name="will_you_want_to_date_a_smoker">흡연자와 데이트하고 싶습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니</string>
    <string name="next">다음</string>
    <string name="what_are_you_looking_for_in_this_app">이 앱에서 무엇을 찾고 있습니까?</string>
    <string name="friendship">우정</string>
    <string name="date">날짜</string>
    <string name="serious_relationship">진지한 관계</string>
    <string name="marriage">결혼</string>
    <string name="conversation">대화</string>
    <string name="long_term">장기간</string>
    <string name="tell_us_about_yourself">자신에 대해 알려주세요.</string>
    <string name="enter_here">여기에 입력…</string>
    <string name="add_academic_background">학력 추가</string>
    <string name="university_name">대학 이름*</string>
    <string name="korea_university">고려대학교</string>
    <string name="high_school_name">고등학교*</string>
    <string name="bomun_high_school">보문고등학교</string>
    <string name="bachelor">미혼 남자</string>
    <string name="master">주인</string>
    <string name="graduate">졸업하다</string>
    <string name="doctor">의사</string>
    <string name="none">없음</string>
    <string name="some_universities">일부 대학</string>
    <string name="no_college">대학 없음</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="hair_color">머리 색깔</string>
    <string name="black_color">검은 색</string>
    <string name="brown">갈색</string>
    <string name="blond_hair">금발</string>
    <string name="red">빨간색</string>
    <string name="grey">회색</string>
    <string name="brunette">갈색 머리</string>
    <string name="language">언어</string>
    <string name="congratulations">축하합니다!</string>
    <string name="you_have_entered_your_information_successfully">정보를 성공적으로 입력했습니다.</string>
    <string name="go_to_home">홈으로 이동</string>
    <string name="success">성공</string>
    <string name="type_here">여기에 입력</string>
    <string name="tic_tac_toe">박하 사탕 발가락</string>
    <string name="player_turn">플레이어 턴</string>
    <string name="score_board">스코어보드</string>
    <string name="write_a_post">게시물 작성</string>
    <string name="image_upload">이미지 업로드</string>
    <string name="explanation">설명</string>
    <string name="please_tell_about_this_image">이 이미지에 대해 알려주세요…</string>
    <string name="add_location">위치 추가</string>
    <string name="seoul_south_korea">대한민국 서울</string>
    <string name="post">게시하다</string>
    <string name="rotate">회전</string>
    <string name="stop_video">비디오 중지</string>
    <string name="mute">음소거</string>
    <string name="end_call">통화 종료</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="choose">선택하다</string>
    <string name="truth">진실</string>
    <string name="dare">도전</string>
    <string name="not_yet_implemented">아직 구현되지 않음</string>
    <string name="i_dare_you_to">감히...</string>
    <string name="likes">좋아요</string>
    <string name="connecting_to_others">다른 사용자와 연결</string>
    <string name="added_to_favorite">즐겨찾기에 추가됨</string>
    <string name="adding_to_fav_error">즐겨찾기에 추가할 수 없습니다. 네트워크 연결 확인.</string>
    <string name="network_error_connect">네트워크 오류. 네트워크 연결 확인</string>
    <string name="favourite_display">가장 좋아하는</string>
    <string name="matches_display">성냥</string>
    <string name="my_profile_display">내 프로필</string>
    <string name="images_display">이미지</string>
    <string name="january">1월</string>
    <string name="february">2월</string>
    <string name="march">3월</string>
    <string name="april">4월</string>
    <string name="may">5월</string>
    <string name="june">6월</string>
    <string name="july">7월</string>
    <string name="august">8월</string>
    <string name="september">9월</string>
    <string name="october">10월</string>
    <string name="november">11월</string>
    <string name="december">12월</string>
    <string name="getting_data">데이터 가져오기…</string>
    <string name="sent_you_a_message">당신에게 메시지를 보냈습니다</string>
    <string name="empty_email_password">이메일 또는 비밀번호가 비어 있습니다..</string>
    <string name="birthday">생신</string>
    <string name="select_your_birthday">생일을 선택하세요</string>
    <string name="select_at_least_one_interest">관심분야를 하나 이상 선택하세요.</string>
    <string name="select_your_marital_status">결혼 여부를 선택하세요</string>
    <string name="select_your_body_style">당신의 몸 스타일을 선택하십시오</string>
    <string name="select_your_preferred_friendship_choice">선호하는 우정 선택을 선택하십시오</string>
    <string name="write_about_yourself">자신에 대해 쓰기</string>
    <string name="enter_your_university_name_or_null">대학 이름을 입력하거나 null</string>
    <string name="choose_your_high_school_name_or_null">고등학교 이름을 선택하거나 null을 선택하십시오.</string>
    <string name="choose_your_education_level_type">교육 수준 유형 선택</string>
    <string name="check_your_email_for_verification_link">이메일에서 확인 링크 확인.</string>
    <string name="choose_your_gender">성별을 선택하세요</string>
    <string name="choose_your_hair_color">머리 색깔을 선택하십시오</string>
    <string name="choose_your_at_least_one_language">하나 이상의 언어를 선택하세요.</string>
    <string name="choose_your_profile_Image">프로필 이미지 선택</string>
    <string name="english">영어</string>
    <string name="korean">한국인</string>
    <string name="japanese">일본어</string>
    <string name="chinese">중국인</string>
    <string name="deutsch">독일어</string>
    <string name="hebrew">헤브라이 사람</string>
    <string name="italian">이탈리아 사람</string>
    <string name="portuguese">포르투갈 인</string>
    <string name="others">기타</string>
    <string name="hint_check_your_spam_folder">힌트: 스팸 폴더를 확인하세요</string>
    <string name="verify_info">참고: 이메일 계정을 확인한 경우에만 프로필을 작성하거나 로그인할 수 있습니다.</string>
    <string name="successful_display">성공적인!!!</string>
    <string name="passwords_dont_match">비밀번호가 일치하지 않습니다</string>
    <string name="enter_password">암호를 입력</string>
    <string name="enter_email">이메일 입력</string>
    <string name="enter_phone_number">전화번호 입력</string>
    <string name="name_cant_be_empty">이름은 비워둘 수 없습니다.</string>
    <string name="gambling">도박</string>
    <string name="athlete">운동 선수</string>
    <string name="books">서적</string>
    <string name="sports">스포츠</string>
    <string name="music">음악</string>
    <string name="cooking">요리</string>
    <string name="dance">춤</string>
    <string name="design">설계</string>
    <string name="technology">기술</string>
    <string name="background">배경</string>

</resources>